# L-Band-QLU

./: convert.py  gen_streamv2.py  generate_stream.py
QLU/: .gitignore  CMakeLists.txt
QLU/configs/: FreeRTOSConfig.h  lwipopts.h
QLU/fonts/: freeMono18.h  freeMono6.h  freeMono9.h
QLU/includes/: ap.h  complex_bpsk_13.h  complex_qam16_13.h  complex_qpsk_13.h  http.h  qlu_base.h  qlu_demod.h  screen.h  stb_ssd1306.h
QLU/libs/QRcode/: CMakeLists.txt  qrcode.h
QLU/libs/ST7735/: CMakeLists.txt
QLU/libs/ST7735/driver/: st7735.c  st7735.h
QLU/libs/ST7735/gfx/: gfx.c  gfx.h
QLU/libs/picow_websockets/: CMakeLists.txt
QLU/routes/: index.h  ws_only.h
QLU/src/: QLU.c  ap.c  example.c  new_QLU.c  old_QLU.c
c_sim/: makefile
c_sim/includes/: base.h  mod_configs.h  slicers.h
c_sim/src/: main.c
headers/: bpsk.h  complex_bpsk.h  complex_qam16.h  complex_qpsk.h  qam16.h  qpsk.h
modulations/: base.py  bpsk.py  metrics.py  qam16.py  qpsk.py  skew.py  util.py
sdr_simulator/: sdr_simulator.ino
